SED-4405 Normalize formatting